Update font loading strategy by changing font-display to 'block' in sf-pro-display.css, implement font loading optimization in _app.tsx, and preload critical font weights in _document.tsx. Adjust global styles to prevent layout shifts and improve text rendering.

--- a/public/fonts/sf-pro-display.css
+++ b/public/fonts/sf-pro-display.css
@@ -5,7 +5,7 @@
   src: url('/fonts/SF-Pro-Display-Regular.otf') format('opentype');
   font-weight: 400;
   font-style: normal;
-  font-display: swap;
+  font-display: block;
 }
 
 @font-face {
@@ -13,7 +13,7 @@
   src: url('/fonts/SF-Pro-Display-RegularItalic.otf') format('opentype');
   font-weight: 400;
   font-style: italic;
-  font-display: swap;
+  font-display: block;
 }
 
 @font-face {
@@ -21,7 +21,7 @@
   src: url('/fonts/SF-Pro-Display-Ultralight.otf') format('opentype');
   font-weight: 100;
   font-style: normal;
-  font-display: swap;
+  font-display: block;
 }
 
 @font-face {
@@ -29,7 +29,7 @@
   src: url('/fonts/SF-Pro-Display-UltralightItalic.otf') format('opentype');
   font-weight: 100;
   font-style: italic;
-  font-display: swap;
+  font-display: block;
 }
 
 @font-face {
@@ -37,7 +37,7 @@
   src: url('/fonts/SF-Pro-Display-Thin.otf') format('opentype');
   font-weight: 200;
   font-style: normal;
-  font-display: swap;
+  font-display: block;
 }
 
 @font-face {
@@ -45,7 +45,7 @@
   src: url('/fonts/SF-Pro-Display-ThinItalic.otf') format('opentype');
   font-weight: 200;
   font-style: italic;
-  font-display: swap;
+  font-display: block;
 }
 
 @font-face {
@@ -53,7 +53,7 @@
   src: url('/fonts/SF-Pro-Display-Light.otf') format('opentype');
   font-weight: 300;
   font-style: normal;
-  font-display: swap;
+  font-display: block;
 }
 
 @font-face {
@@ -61,7 +61,7 @@
   src: url('/fonts/SF-Pro-Display-LightItalic.otf') format('opentype');
   font-weight: 300;
   font-style: italic;
-  font-display: swap;
+  font-display: block;
 }
 
 @font-face {
@@ -69,7 +69,7 @@
   src: url('/fonts/SF-Pro-Display-Medium.otf') format('opentype');
   font-weight: 500;
   font-style: normal;
-  font-display: swap;
+  font-display: block;
 }
 
 @font-face {
@@ -77,7 +77,7 @@
   src: url('/fonts/SF-Pro-Display-MediumItalic.otf') format('opentype');
   font-weight: 500;
   font-style: italic;
-  font-display: swap;
+  font-display: block;
 }
 
 @font-face {
@@ -85,7 +85,7 @@
   src: url('/fonts/SF-Pro-Display-Semibold.otf') format('opentype');
   font-weight: 600;
   font-style: normal;
-  font-display: swap;
+  font-display: block;
 }
 
 @font-face {
@@ -93,7 +93,7 @@
   src: url('/fonts/SF-Pro-Display-SemiboldItalic.otf') format('opentype');
   font-weight: 600;
   font-style: italic;
-  font-display: swap;
+  font-display: block;
 }
 
 @font-face {
@@ -101,7 +101,7 @@
   src: url('/fonts/SF-Pro-Display-Bold.otf') format('opentype');
   font-weight: 700;
   font-style: normal;
-  font-display: swap;
+  font-display: block;
 }
 
 @font-face {
@@ -109,7 +109,7 @@
   src: url('/fonts/SF-Pro-Display-BoldItalic.otf') format('opentype');
   font-weight: 700;
   font-style: italic;
-  font-display: swap;
+  font-display: block;
 }
 
 @font-face {
@@ -117,7 +117,7 @@
   src: url('/fonts/SF-Pro-Display-Heavy.otf') format('opentype');
   font-weight: 800;
   font-style: normal;
-  font-display: swap;
+  font-display: block;
 }
 
 @font-face {
@@ -125,7 +125,7 @@
   src: url('/fonts/SF-Pro-Display-HeavyItalic.otf') format('opentype');
   font-weight: 800;
   font-style: italic;
-  font-display: swap;
+  font-display: block;
 }
 
 @font-face {
@@ -133,7 +133,7 @@
   src: url('/fonts/SF-Pro-Display-Black.otf') format('opentype');
   font-weight: 900;
   font-style: normal;
-  font-display: swap;
+  font-display: block;
 }
 
 @font-face {
@@ -141,5 +141,5 @@
   src: url('/fonts/SF-Pro-Display-BlackItalic.otf') format('opentype');
   font-weight: 900;
   font-style: italic;
-  font-display: swap;
+  font-display: block;
 } 
